--- a/package.json
+++ b/package.json
@@ -3,28 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.8.5",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
+    "@turf/buffer": "^6.5.0",
     "@turf/turf": "^6.5.0",
     "algoliasearch": "^4.10.5",
     "axios": "^0.21.4",
+    "chart.js": "^3.7.1",
+    "framer-motion": "^4.1.17",
     "http-proxy-middleware": "^2.0.1",
     "install": "^0.13.0",
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
     "npm": "^7.20.6",
+    "plotly.js": "^2.9.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap-range-slider": "^3.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-d3-library": "^1.1.8",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
     "react-leaflet-draw": "^0.19.8",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-search-autocomplete": "^5.4.2",
+    "recharts": "^2.1.9",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
