--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "recharts": "^2.1.9",
     "web-vitals": "^1.1.0"
   },
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=16.0.0 <17.0.0"
+  },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
