--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "install": "^0.13.0",
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
-    "npm": "^7.20.6",
-    "plotly.js": "^2.9.0",
+    "npm": "^8.19.2",
+    "plotly.js": "^1.44.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap-range-slider": "^3.0.2",
     "react-chartjs-2": "^4.0.1",
-    "react-d3-library": "^1.1.8",
+    "react-d3-library": "^1.0.5",
     "react-dom": "^17.0.2",
     "react-leaflet": "^2.7.0",
     "react-leaflet-draw": "^0.19.0",
     "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.3",
     "recharts": "^2.1.9",
     "web-vitals": "^1.1.0"
   },
