--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "algoliasearch": "^4.10.5",
     "axios": "^0.21.4",
     "chart.js": "^3.7.1",
-    "create-app-react": "^1.0.6",
+    "create-react-app": "^1.2.1",
     "framer-motion": "^4.1.17",
     "http-proxy-middleware": "^2.0.1",
     "install": "^0.13.0",
@@ -24,8 +24,6 @@
     "plotly.js": "^1.44.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-autosuggest": "^10.1.0",
-    "react-bootstrap-range-slider": "^3.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-d3-library": "^1.0.5",
     "react-dom": "^17.0.2",
@@ -36,10 +34,6 @@
     "react-scripts": "^2.1.3",
     "recharts": "^2.1.9",
     "web-vitals": "^1.1.0"
-  },
-  "engines": {
-    "npm": ">=8.0.0 <9.0.0",
-    "node": ">=16.0.0 <17.0.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
