--- a/package.json
+++ b/package.json
@@ -1,42 +1,28 @@
 {
-  "name": "react-course",
+  "name": "retsidss",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.8.5",
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@turf/buffer": "^6.5.0",
     "@turf/turf": "^6.5.0",
-    "algoliasearch": "^4.10.5",
-    "axios": "^0.21.4",
-    "chart.js": "^3.7.1",
-    "create-react-app": "^1.2.1",
-    "framer-motion": "^4.1.17",
-    "http-proxy-middleware": "^2.0.1",
-    "install": "^0.13.0",
-    "leaflet": "^1.7.1",
+    "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "leaflet": "^1.9.1",
     "leaflet-draw": "^1.0.4",
-    "npm": "^8.19.2",
-    "plotly.js": "^1.44.4",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-chartjs-2": "^4.0.1",
-    "react-d3-library": "^1.0.5",
-    "react-dom": "^17.0.2",
-    "react-leaflet": "^2.7.0",
-    "react-leaflet-draw": "^0.19.0",
-    "react-plotly.js": "^2.5.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.1.0",
+    "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.3",
-    "recharts": "^2.1.9",
-    "web-vitals": "^1.1.0"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -47,12 +33,16 @@
       "react-app/jest"
     ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "@types/leaflet": "^1.7.4"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
