--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^3.9.1",
     "leaflet": "^1.9.1",
     "leaflet-draw": "^1.0.4",
+    "proj4leaflet": "^1.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
